updated: manual reorganised manual structure cleaned up Makefile

--- a/MANUAL/html-data/About.html
+++ b/MANUAL/html-data/About.html
@@ -109,6 +109,6 @@ If you wish to uninstall gnuclad, simply open a terminal in the main gnuclad
 folder and execute:
 <pre class="example">       make uninstall
 </pre>
-   <!-- __________________________________________________________________ USAGE TIPS -->
+   <!-- Part of the gnuclad texinfo manual -->
    </body></html>
 
