--- a/MANUAL/html-data/Config-Options.html
+++ b/MANUAL/html-data/Config-Options.html
@@ -205,8 +205,6 @@ config file.
      # 0 = off, 1 = on
      debug = 0
 </pre>
-<!-- _________________________________________________________________________ FAQ -->
-   <p><a name="index-FAQ-3"></a>
-
+<!-- Part of the gnuclad texinfo manual -->
    </body></html>
 
