--- a/MANUAL/html-data/FAQ.html
+++ b/MANUAL/html-data/FAQ.html
@@ -44,7 +44,8 @@ Up:&nbsp;<a rel="up" accesskey="u" href="index.html#Top">Top</a>
 
 <h2 class="chapter">4 Frequently Asked Questions</h2>
 
-<p><strong>Are there any office spreadsheet editors that have trouble editing
+<p><a name="index-FAQ-3"></a>
+<strong>Are there any office spreadsheet editors that have trouble editing
 standard CSV spreadsheets?</strong><br>
 Yes, a widely used non-POSIX office suite from 2007 has considerable problems
 saving a CSV correctly.
@@ -54,6 +55,6 @@ SVG is supported by nearly any graphical browser available.
 Notable browsers incapable of rendering SVG include Dillo (all versions) and
 MS Internet Explorer (all versions, can be remedied with plugins).
 
-<!-- _________________________________________________________________ PROGRAMMING -->
+<!-- Part of the gnuclad texinfo manual -->
    </body></html>
 
