--- a/MANUAL/html-data/Usage-Tips.html
+++ b/MANUAL/html-data/Usage-Tips.html
@@ -73,14 +73,13 @@ your single nodes won't be mangled.
 <h3 class="section">2.3 Optimisation - how it works</h3>
 
 <p>The optimisation parameter can be set to a value between 0 and 99. 
-0 obviously turns any optimisation off while 99 tries to stuff the resulting
+0 turns off optimisation completely while 99 tries to stuff the resulting
 image closely together.
 
    <p>The first digit refers to the optimisation factor for isolated nodes, those
 which are not part of the tree. The higher it is, the more aggressively they
-will be appended to each other.
-
-   <p>The second digit sets the tree optimisation. Higher values will try to cramp the
+will be appended to each other. 
+The second digit sets the tree optimisation. Higher values will try to cramp the
 tree together more than lower ones.
 
 <h3 class="section">2.4 Optimisation - additional info</h3>
@@ -104,6 +103,6 @@ tree together more than lower ones.
 </pre>
    <p>Sorting by start date (see config options) might help a bit.
 
-<!-- ______________________________________________________________ CONFIG OPTIONS -->
+<!-- Part of the gnuclad texinfo manual -->
    </body></html>
 
