--- a/MANUAL/html-data/index.html
+++ b/MANUAL/html-data/index.html
@@ -59,6 +59,7 @@ Up:&nbsp;<a rel="up" accesskey="u" href="../index.html#dir">(dir)</a>
 <li><a accesskey="2" href="Index.html#Index">Index</a>:  Anchor index
 </ul>
 
-<!-- _______________________________________________________________________ ABOUT -->
+<!-- ________________________________________________________________________ BODY -->
+<!-- Part of the gnuclad texinfo manual -->
    </body></html>
 
