--- a/MANUAL/html-data/Index.html
+++ b/MANUAL/html-data/Index.html
@@ -46,7 +46,7 @@ Up:&nbsp;<a rel="up" accesskey="u" href="index.html#Top">Top</a>
 <li><a href="Programming.html#index-Adding-a-parser_002fgenerator-4">Adding a parser/generator</a>: <a href="Programming.html#Programming">Programming</a></li>
 <li><a href="Programming.html#index-Classes-5">Classes</a>: <a href="Programming.html#Programming">Programming</a></li>
 <li><a href="Config-Options.html#index-Detailed-configuration-options-2">Detailed configuration options</a>: <a href="Config-Options.html#Config-Options">Config Options</a></li>
-<li><a href="Config-Options.html#index-FAQ-3">FAQ</a>: <a href="Config-Options.html#Config-Options">Config Options</a></li>
+<li><a href="FAQ.html#index-FAQ-3">FAQ</a>: <a href="FAQ.html#FAQ">FAQ</a></li>
 <li><a href="About.html#index-Getting-Started-1">Getting Started</a>: <a href="About.html#About">About</a></li>
 <li><a href="Programming.html#index-Utility-functions-6">Utility functions</a>: <a href="Programming.html#Programming">Programming</a></li>
 </ul></body></html>
