--- a/MANUAL/html-data/Programming.html
+++ b/MANUAL/html-data/Programming.html
@@ -55,12 +55,12 @@ Patches are always welcome. New parsers/generators even more so!
 <p>When adding a configuration option, be sure to implement it at least in the
 following places:
      <ul>
-<li>gnuclad.h declaration
+<li>gnuclad.h declaration (members of the Cladogram class)
 <li>gnuclad.cpp initalisation (in the constructor of the Cladogram object)
 <li>gnuclad.cpp parser (in the parseOptions function)
 <li>generatorCONF.cpp
-<li>the texinfo documentation, chapter Config Options (insert the config file
-      created by generatorCONF)
+<li>the texinfo documentation, chapter Config Options (insert the new config
+      file created by generatorCONF)
 <li>third party gnuclad configuration files you have access to
 </ul>
 
@@ -85,11 +85,13 @@ For detailed information, see the "How to write a ..." sections below.
 <pre class="example">     #include "gnuclad.h"
      derive class from Parser:
        class ParserXXX: public Parser
-     add public method:
+     declare constructor and destructor
+     declare public method:
        void parseData(Cladogram * clado, std::ifstream * fp);
 </pre>
    <p>parserXXX.cpp:
 <pre class="example">     #include "parserXXX.h"
+     implement constructor and destructor
      implement parseData(Cladogram * clad, std::ifstream * fp);
 </pre>
    <p>gnuclad.cpp:
@@ -104,11 +106,13 @@ For detailed information, see the "How to write a ..." sections below.
 <pre class="example">     #include "gnuclad.h"
      derive class from generator:
        class GeneratorXXX: public Generator
-     add public method:
+     declare constructor and destructor
+     declare public method:
        void writeData(Cladogram * clad, std::ofstream * fp);
 </pre>
    <p>generatorXXX.cpp:
 <pre class="example">     #include "generatorXXX.h"
+     implement constructor and destructor
      implement writeData();
 </pre>
    <p>gnuclad.cpp
