implemented: better validxml() algorithm implemented: descriptionType (formerly hyperlink) improved: default config options code cleanup fixed: manual typos implemented: manual cross references added: example.conf example2.conf improved: included example images

--- a/MANUAL/html-data/About.html
+++ b/MANUAL/html-data/About.html
@@ -103,7 +103,7 @@ acquainted with it's syntax:
        ./gnuclad -h
 </pre>
    <p>Change to the example folder and generate your first SVG image:
-<pre class="example">       cd ../example
+<pre class="example">       cd ../EXAMPLE
        ../bin/gnuclad example.csv svg example.conf
 </pre>
    <p>In order to install gnuclad on a POSIX conform system, change to the main
