--- a/MANUAL/html-data/Programming.html
+++ b/MANUAL/html-data/Programming.html
@@ -56,11 +56,11 @@ Patches are always welcome. New parsers/generators even more so!
 following places:
      <ul>
 <li>gnuclad.h declaration (members of the Cladogram class)
-<li>gnuclad.cpp initalisation (in the constructor of the Cladogram object)
+<li>gnuclad.cpp initialisation (in the constructor of the Cladogram object)
 <li>gnuclad.cpp parser (in the parseOptions function)
 <li>generatorCONF.cpp
-<li>the texinfo documentation, chapter Config Options (insert the new config
-      file created by generatorCONF)
+<li>the texinfo documentation, chapter <a href="Config-Options.html#Config-Options">Config Options</a>
+      (insert the new config file created by generatorCONF)
 <li>third party gnuclad configuration files you have access to
 </ul>
 
@@ -77,7 +77,8 @@ declarations.
 generators write data from the Cladogram object to a specified output format.
 
    <p>This is a short overview on the steps necessary to include a parser/generator. 
-For detailed information, see the "How to write a ..." sections below.
+For detailed information, see the "How to write a parser" and
+"How to write a generator" sections further below.
 
    <p><strong>Adding a parser</strong>
 
@@ -87,7 +88,7 @@ For detailed information, see the "How to write a ..." sections below.
        class ParserXXX: public Parser
      declare constructor and destructor
      declare public method:
-       void parseData(Cladogram * clado, std::ifstream * fp);
+       void parseData(Cladogram * clad, std::ifstream * fp);
 </pre>
    <p>parserXXX.cpp:
 <pre class="example">     #include "parserXXX.h"
@@ -263,7 +264,8 @@ The option names are identical to the variable names.
 header file and search for CONFIG OPTIONS. This will take you straight to the
 declarations.
 
-   <p>You can also look at the 'Config Options' manual chapter for an overview.
+   <p>You can also look at the <a href="Config-Options.html#Config-Options">Config Options</a> manual chapter
+for an overview.
 
 <!-- _______________________________________________________________ HOW TO PARSER -->
 <h3 class="section">5.5 How to write a parser</h3>
