split off cladogram implementation improved gnuclad-portability.h (#ifndef, const folder_delimiter) improved manual structure updated TODO

--- a/MANUAL/html-data/Index.html
+++ b/MANUAL/html-data/Index.html
@@ -43,11 +43,14 @@ Up:&nbsp;<a rel="up" accesskey="u" href="index.html#Top">Top</a>
 <h2 class="unnumbered">Index</h2>
 
 <ul class="index-cp" compact>
-<li><a href="Programming.html#index-Adding-a-parser_002fgenerator-4">Adding a parser/generator</a>: <a href="Programming.html#Programming">Programming</a></li>
-<li><a href="Programming.html#index-Classes-5">Classes</a>: <a href="Programming.html#Programming">Programming</a></li>
 <li><a href="Config-Options.html#index-Detailed-configuration-options-2">Detailed configuration options</a>: <a href="Config-Options.html#Config-Options">Config Options</a></li>
 <li><a href="FAQ.html#index-FAQ-3">FAQ</a>: <a href="FAQ.html#FAQ">FAQ</a></li>
 <li><a href="About.html#index-Getting-Started-1">Getting Started</a>: <a href="About.html#About">About</a></li>
-<li><a href="Programming.html#index-Utility-functions-6">Utility functions</a>: <a href="Programming.html#Programming">Programming</a></li>
-</ul></body></html>
+</ul>
+
+<ul class="index-gc" compact>
+<li><a href="Classes-and-utilities.html#index-Classes-5">Classes</a>: <a href="Classes-and-utilities.html#Classes-and-utilities">Classes and utilities</a></li>
+<li><a href="Adding-config-options_002c-parsers-and-generators.html#index-Quickly-adding-things_002e-4">Quickly adding things.</a>: <a href="Adding-config-options_002c-parsers-and-generators.html#Adding-config-options_002c-parsers-and-generators">Adding config options, parsers and generators</a></li>
+<li><a href="Classes-and-utilities.html#index-Utility-functions-6">Utility functions</a>: <a href="Classes-and-utilities.html#Classes-and-utilities">Classes and utilities</a></li>
+   </ul></body></html>
 
