implemented: Date::operator==(Date d); implemented: InputFile, OutputFile lots of code cleanup better organisation of manual (split config, parser, generator) lots of manual cleanup

--- a/manual/html-data/Usage-Tips.html
+++ b/manual/html-data/Usage-Tips.html
@@ -44,7 +44,7 @@ Up:&nbsp;<a rel="up" accesskey="u" href="index.html#Top">Top</a>
 
 <h2 class="chapter">2 Usage Tips</h2>
 
-<h3 class="section">2.1 CSV spreadsheets as input</h3>
+<h3 class="section">2.1 CSV spreadsheet as input</h3>
 
 <p>You can include SVG images in the CSV spreadsheets. 
 Keep in mind that only the defs and drawing data (paths etc) are imported,
@@ -55,7 +55,7 @@ a bug detailing the problem.
    <p>You can also include PNG images in the CSV, but keep in mind that raster images
 are encoded in base64 and may result in a really huge output file.
 
-<h3 class="section">2.2 CSV spreadsheets as output</h3>
+<h3 class="section">2.2 CSV spreadsheet as output</h3>
 
 <p>All nodes with a starting date newer than endOfTime (usually the current date)
 will be ignored. 
