--- a/manual/html-data/Programming.html
+++ b/manual/html-data/Programming.html
@@ -49,8 +49,9 @@ Patches are always welcome. New parsers/generators even more so!
 
 <ul class="menu">
 <li><a accesskey="1" href="Classes-and-utilities.html#Classes-and-utilities">Classes and utilities</a>
-<li><a accesskey="2" href="Adding-config-options_002c-parsers-and-generators.html#Adding-config-options_002c-parsers-and-generators">Adding config options, parsers and generators</a>
-<li><a accesskey="3" href="How-to-use-config-options-and-write-a-parser_002fgenerator.html#How-to-use-config-options-and-write-a-parser_002fgenerator">How to use config options and write a parser/generator</a>
+<li><a accesskey="2" href="Configuration-Options.html#Configuration-Options">Configuration Options</a>
+<li><a accesskey="3" href="Writing-a-parser.html#Writing-a-parser">Writing a parser</a>
+<li><a accesskey="4" href="Writing-a-generator.html#Writing-a-generator">Writing a generator</a>
 </ul>
 
 <!-- Part of the gnuclad texinfo manual -->
