added: gnuclad-usage.texi improved: INSTALL

--- a/manual/src/gnuclad.html/Index.html
+++ b/manual/src/gnuclad.html/Index.html
@@ -45,7 +45,7 @@ Up:&nbsp;<a rel="up" accesskey="u" href="index.html#Top">Top</a>
 <ul class="index-cp" compact>
 <li><a href="Config-Options.html#index-Detailed-configuration-options-2">Detailed configuration options</a>: <a href="Config-Options.html#Config-Options">Config Options</a></li>
 <li><a href="FAQ.html#index-FAQ-3">FAQ</a>: <a href="FAQ.html#FAQ">FAQ</a></li>
-<li><a href="About.html#index-Getting-Started-1">Getting Started</a>: <a href="About.html#About">About</a></li>
+<li><a href="Usage.html#index-Getting-Started-1">Getting Started</a>: <a href="Usage.html#Usage">Usage</a></li>
 </ul>
 
 <ul class="index-gc" compact>
