--- a/manual/src/gnuclad.html/index.html
+++ b/manual/src/gnuclad.html/index.html
@@ -44,14 +44,15 @@ Up:&nbsp;<a rel="up" accesskey="u" href="../index.html#dir">(dir)</a>
 
 <h2 class="unnumbered">gnuclad cladogram generator</h2>
 
-<p>This is the Texinfo manual for gnuclad version 0.1 (28 February 2010)
+<p>This is the Texinfo manual for gnuclad version 0.1.x (28 February 2010)
 
 <ul class="menu">
 <li><a accesskey="1" href="About.html#About">About</a>:  General information
-<li><a accesskey="2" href="Usage-Tips.html#Usage-Tips">Usage Tips</a>:  Useful things to know
-<li><a accesskey="3" href="Config-Options.html#Config-Options">Config Options</a>:  An overview
-<li><a accesskey="4" href="FAQ.html#FAQ">FAQ</a>:  Frequently Asked Questions
-<li><a accesskey="5" href="Programming.html#Programming">Programming</a>:  Contribute to the project
+<li><a accesskey="2" href="Usage.html#Usage">Usage</a>:  Basics
+<li><a accesskey="3" href="Usage-Tips.html#Usage-Tips">Usage Tips</a>:  Things to know
+<li><a accesskey="4" href="Config-Options.html#Config-Options">Config Options</a>:  An overview
+<li><a accesskey="5" href="FAQ.html#FAQ">FAQ</a>:  Frequently Asked Questions
+<li><a accesskey="6" href="Programming.html#Programming">Programming</a>:  Contribute to the project
 </ul>
 
 <ul class="menu">
