added small copyright notice to all supporting files

--- a/manual/src/gnuclad.html/Usage.html
+++ b/manual/src/gnuclad.html/Usage.html
@@ -75,7 +75,7 @@ On Windows, compilation works flawlessly with MinGW &amp; MSYS, though it may be
 possible with other compilers by tweaking the Makefile.
 
    <p>To compile gnuclad, open the gnuclad main folder in a terminal and type:
-<pre class="example">       ./configure
+<pre class="example">       sh configure
        make
 </pre>
    <p>This will produce a 'gnuclad' binary in the src folder. 
